tests/katib/installs/katib-standalone-ibm/test_data/expected/~g_v1_service_katib-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: katib
    app.kubernetes.io/component: katib
    app.kubernetes.io/instance: katib-controller
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: katib-controller
    app.kubernetes.io/part-of: kubeflow
    component: mysql
  name: katib-mysql
  namespace: kubeflow
spec:
  ports:
  - name: dbapi
    port: 3306
    protocol: TCP
  selector:
    app: katib
    app.kubernetes.io/component: katib
    app.kubernetes.io/instance: katib-controller
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: katib-controller
    app.kubernetes.io/part-of: kubeflow
    component: mysql
  type: ClusterIP
